# cft

./: .gitignore  README.md  pyproject.toml
cft/: main.py  secret.txt  start.bat  test_simple_db.txt
